[package]
name = "tes-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tes-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tes_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
ndarray = "0.16.1"
glob = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.89"
regex = "1.11.1"
csv = "1.3.1"
biquad = "0.5.0"
plotters = "0.3.7"
rayon = "1.10.0"
reqwest = { version = "0.12.18", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tauri-plugin-fs = "2"
